# common-python-utils

./: .coveragerc  .env.example  .gitignore  .releaserc.json  CHANGELOG.md  README.md  evaluator.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/decisions/: ADR-001-split-package-identity.md  ADR-002-namespace-rename.md  ADR-003-clerk-m2m-opaque-tokens.md  README.md
src/kaiano/: __init__.py  config.py  logger.py
src/kaiano/api/: client.py
src/kaiano/google/: README.md  __init__.py  _auth.py  _retry.py  drive.py  errors.py  google.py  sheets.py  sheets_formatting.py
src/kaiano/llm/: anthropic_client.py  base.py  factory.py  openai_client.py  types.py
src/kaiano/spotify/: spotify.py
src/mini_app_polis/: __init__.py  config.py  logger.py  pipeline_status.py
src/mini_app_polis/api/: __init__.py  client.py  errors.py
src/mini_app_polis/google/: README.md  __init__.py  _auth.py  _retry.py  drive.py  errors.py  google.py  sheets.py  sheets_formatting.py  types.py
src/mini_app_polis/llm/: __init__.py  _json.py  anthropic_client.py  base.py  errors.py  openai_client.py  types.py
src/mini_app_polis/mp3/: __init__.py
src/mini_app_polis/music/: __init__.py  normalization.py
src/mini_app_polis/spotify/: __init__.py  spotify.py
tests/kaiano/: test_config.py  test_logger.py
tests/kaiano/api/: test_api_client.py
tests/kaiano/google/: conftest.py  test_auth.py  test_drive_facade.py  test_google_api.py  test_more_coverage.py  test_retry.py  test_retry_edge_cases.py  test_sheets_facade.py  test_sheets_formatting.py
tests/kaiano/llm/: test_llm.py
tests/kaiano/mp3/: test_mp3_identifier_and_providers.py  test_rename_facade_and_renamer.py  test_tag_snapshot_and_tagger.py
tests/kaiano/spotify/: test_spotify_facade.py  (+1 more)
tests/mini_app_polis/: conftest.py  test_config.py  test_logger.py  test_pipeline_status.py
(+40 files in other folders)
