[project]
name = "common-python-utils"
version = "2.4.2"
description = "Common utility functions shared across Kaiano's projects."
authors = [{ name = "Kaiano Levine", email = "kaiano@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "jsonschema>=4.23.0,<5.0.0",
  "gspread>=6.0.2,<7.0.0",
  "google-auth>=2.29.0,<3.0.0",
  "google-api-python-client>=2.177.0,<3.0.0",
  "spotipy>=2.23.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "mutagen>=1.47.0,<2.0.0",
  "gspread-formatting>=1.2.1,<2.0.0",
  "music-tag>=0.4.3,<0.5.0",
  "pyacoustid>=1.3.0,<2.0.0",
  "musicbrainzngs>=0.7.1,<0.8.0",
  "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
llm = ["openai", "anthropic"]
dev = [
  "pytest>=8.4.0,<9.0.0",
  "pytest-cov>=6.2.1,<7.0.0",
  "pre-commit>=4.2.0,<5.0.0",
  "coverage>=7.10.1,<8.0.0",
  "mypy>=1.11.2,<2.0.0",
  "ruff>=0.8.0",
  "types-requests>=2.32.0,<3.0.0",
]

[tool.uv]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mini_app_polis"]

[tool.coverage.run]
branch = true
source = ["mini_app_polis"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
ignore = ["E501", "B008", "ARG001"]

[tool.ruff.lint.isort]
known-first-party = ["mini_app_polis"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false

[tool.pytest.ini_options]
addopts = "--cov=mini_app_polis --cov-report=term-missing"
testpaths = ["tests"]
